[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meda"
authors = [
    {name="Wang Dapeng", email="perillaroc@gmail.com"}
]
description = "A graph tool for CEMC/CMA."
readme = "README.md"
keywords = ["graphic", "cemc"]
version = "0.0.1"
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    'License :: OSI Approved :: Apache Software License',

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cartopy",
    "xarray",
    'importlib-metadata; python_version<"3.8"',
]

[project.urls]
Homepage = "https://github.com/perillaroc/meda"
Repository = "https://github.com/perillaroc/meda.git"

[project.optional-dependencies]
test = ["pytest"]
cov = ["pytest-cov", "codecov"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs", "example"]
namespaces = false

[tool.setuptools]
include-package-data = true
